basic components: EVENT_NAME modernization + valueEventName constant definition if needed
Signed-off-by: pizzi80 <paolo@given2.com>