@@ -19,9 +19,8 @@ package jakarta.faces.component.html;
 
 import static jakarta.faces.component.html.HtmlComponentUtils.handleAttribute;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.faces.component.UISelectMany;
 import jakarta.faces.component.behavior.ClientBehaviorHolder;
@@ -893,8 +892,10 @@ public class HtmlSelectManyCheckbox extends UISelectMany implements ClientBehavi
         getStateHelper().put(PropertyKeys.unselectedClass, unselectedClass);
     }
 
-    private static final Collection<String> EVENT_NAMES = Collections.unmodifiableCollection(Arrays.asList("blur", "change", "click", "valueChange", "dblclick",
-            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup", "select"));
+    private static final String DEFAULT_EVENT = "valueChange";
+
+    private static final Collection<String> EVENT_NAMES = List.of("blur", "change", "click", "valueChange", "dblclick",
+            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup", "select");
 
     @Override
     public Collection<String> getEventNames() {
@@ -903,7 +904,7 @@ public class HtmlSelectManyCheckbox extends UISelectMany implements ClientBehavi
 
     @Override
     public String getDefaultEventName() {
-        return "valueChange";
+        return DEFAULT_EVENT;
     }
 
 }
