@@ -19,9 +19,8 @@ package jakarta.faces.component.html;
 
 import static jakarta.faces.component.html.HtmlComponentUtils.handleAttribute;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.faces.component.UISelectOne;
 import jakarta.faces.component.behavior.ClientBehaviorHolder;
@@ -763,8 +762,10 @@ public class HtmlSelectOneMenu extends UISelectOne implements ClientBehaviorHold
         handleAttribute(this, "title", title);
     }
 
-    private static final Collection<String> EVENT_NAMES = Collections.unmodifiableCollection(Arrays.asList("blur", "change", "valueChange", "click", "dblclick",
-            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup"));
+    private static final String DEFAULT_EVENT = "valueChange";
+
+    private static final Collection<String> EVENT_NAMES = List.of("blur", "change", "valueChange", "click", "dblclick",
+            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup");
 
     @Override
     public Collection<String> getEventNames() {
@@ -773,7 +774,7 @@ public class HtmlSelectOneMenu extends UISelectOne implements ClientBehaviorHold
 
     @Override
     public String getDefaultEventName() {
-        return "valueChange";
+        return DEFAULT_EVENT;
     }
 
 }
